--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -17,12 +17,22 @@ body{
 .m{
 	padding:0px;
 	margin:0 auto;
-	width:800px;
-	height:100px;
+	width:100%;
+	height:300px;
 }
 .a1{
 	margin:40px;
-}	
+}
+p{
+	font-size:70px;
+	text-align:center;
+}
+.plyr__controls{
+	line-height:3;
+}
+.plyr__time{
+	font-size:34px;
+}
 </style>
 
 </head>
