--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@ p{
 .plyr__time{
 	font-size:34px;
 }
+.plyr__controls button svg{
+	width:60px;
+	height:60px;
+}
+.plyr__progress--buffer, .plyr__progress--played, .plyr__volume--display{
+	height:30px;
+	top:1%;
+}
 </style>
 
 </head>
