--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ body{
 	margin:0 auto;
 	width:100%;
 	height:300px;
+	border-bottom:10px dashed black;
 }
 .a1{
 	margin:40px;
@@ -34,8 +35,8 @@ p{
 	font-size:34px;
 }
 .plyr__controls button svg{
-	width:60px;
-	height:60px;
+	width:80px;
+	height:80px;
 }
 .plyr__progress--buffer, .plyr__progress--played, .plyr__volume--display{
 	height:30px;
